# glitz

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.in  glitz-agl.pc.in  glitz-glx.pc.in  glitz.pc.in
config/: .cvsignore  .gitignore
src/: Makefile.am  glitz-agl.h  glitz-glx.h  glitz.c  glitz.h  glitz.man  glitz_agl_context.c  glitz_agl_extension.c  glitz_agl_format.c  glitz_agl_info.c  glitz_agl_pbuffer.c  glitz_agl_surface.c  glitz_aglint.h  glitz_buffer.c  glitz_color_range.c  glitz_compose.c  glitz_context.c  glitz_drawable.c  glitz_filter.c  glitz_format.c  glitz_framebuffer.c  glitz_geometry.c  glitz_gl.h  glitz_glx_context.c  glitz_glx_extension.c  glitz_glx_format.c  glitz_glx_info.c  glitz_glx_pbuffer.c  glitz_glx_surface.c  glitz_glxext.h  glitz_glxint.h  glitz_matrix.c  glitz_operator.c  glitz_pixel.c  glitz_program.c  glitz_programmatic.c  glitz_rect.c  glitz_region.c  glitz_render.c  glitz_status.c  (+8 more)
src/agl/: Makefile.am  glitz-agl.h  glitz_agl_context.c  glitz_agl_drawable.c  glitz_agl_extension.c  glitz_agl_format.c  glitz_agl_info.c  glitz_agl_pbuffer.c  glitz_aglint.h
src/dummy/: Makefile.am  glitz-dummy.h  glitz-dummy.pc.in  glitz_dummy_drawable.c  glitz_dummyint.h
src/egl/: Makefile.am  glitz-egl.h  glitz-egl.pc.in  glitz_egl_config.c  glitz_egl_context.c  glitz_egl_info.c  glitz_egl_surface.c  glitz_eglext.h  glitz_eglint.h
src/glx/: Makefile.am  glitz-glx.h  glitz_glx_context.c  glitz_glx_drawable.c  glitz_glx_extension.c  glitz_glx_format.c  glitz_glx_info.c  glitz_glx_pbuffer.c  glitz_glxext.h  glitz_glxint.h
src/wgl/: Makefile.am  glitz-wgl.pc.in  glitz_wgl_context.c  glitz_wgl_drawable.c  glitz_wgl_format.c  glitz_wglint.h
